Setup contact list table

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,21 @@
 <h1>Contact List</h1>
 
+<button id='showContacts'>Show Contacts</button>
 <button id='showNewContactForm'>Create Contact</button>
+
+<div id='contactList' class='is-hidden'>
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Phone</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+</div>
 
 <div id='createContact' class='is-hidden'>
 <form>
