Display contact details

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -23,11 +23,15 @@
         <th>Name</th>
         <th>Email</th>
         <th>Phone</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
     </tbody>
   </table>
+</div>
+
+<div id='contactDetails' class='is-hidden'>
 </div>
 
 <form id='createContact' class='is-hidden'>
