--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,7 +12,7 @@
   -->
   <link rel="stylesheet" href="/stylesheets/application.css">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="/javascript/jquery-2.2.0.min.js"></script>
   <script src="/javascript/application.js"></script>
 
   <title></title>
